--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tiptap/extension-image": "^3.11.0",
+        "@tiptap/extension-placeholder": "^3.11.0",
+        "@tiptap/react": "^3.11.0",
+        "@tiptap/starter-kit": "^3.11.0",
+        "@vitejs/plugin-react": "^4.2.1",
         "firebase": "^10.12.3",
+        "lottie-react": "^2.4.1",
         "lucide-react": "^0.395.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "@vitejs/plugin-react": "^4.2.1"
+        "react-modal": "^3.16.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
