--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tiptap/core": "^3.11.0",
+        "@tiptap/extension-font-family": "^3.11.0",
         "@tiptap/extension-image": "^3.11.0",
+        "@tiptap/extension-link": "^3.11.0",
         "@tiptap/extension-placeholder": "^3.11.0",
+        "@tiptap/extension-text-align": "^3.11.0",
+        "@tiptap/extension-text-style": "^3.11.0",
         "@tiptap/react": "^3.11.0",
         "@tiptap/starter-kit": "^3.11.0",
         "@vitejs/plugin-react": "^4.2.1",
